--- a/cdownloadmpc.ui
+++ b/cdownloadmpc.ui
@@ -77,6 +77,9 @@
    <property name="text">
     <string>Download</string>
    </property>
+   <property name="default">
+    <bool>true</bool>
+   </property>
   </widget>
   <widget class="QLabel" name="label_3">
    <property name="geometry">
