--- a/cdsocatalogue.ui
+++ b/cdsocatalogue.ui
@@ -496,6 +496,9 @@
        <property name="text">
         <string>Make List</string>
        </property>
+       <property name="default">
+        <bool>true</bool>
+       </property>
       </widget>
      </item>
      <item>
