--- a/cdssdlg.ui
+++ b/cdssdlg.ui
@@ -261,6 +261,9 @@
          <property name="text">
           <string>Download</string>
          </property>
+         <property name="default">
+          <bool>true</bool>
+         </property>
         </widget>
        </item>
        <item>
