--- a/cinsertcircle.ui
+++ b/cinsertcircle.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>283</width>
-    <height>162</height>
+    <height>168</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -87,6 +87,9 @@
       <widget class="QPushButton" name="pushButton_2">
        <property name="text">
         <string>OK</string>
+       </property>
+       <property name="default">
+        <bool>true</bool>
        </property>
       </widget>
      </item>
