--- a/cobjinfo.ui
+++ b/cobjinfo.ui
@@ -47,6 +47,9 @@
        <property name="checkable">
         <bool>false</bool>
        </property>
+       <property name="default">
+        <bool>true</bool>
+       </property>
       </widget>
      </item>
      <item>
