--- a/cdbstarsdlg.ui
+++ b/cdbstarsdlg.ui
@@ -55,6 +55,9 @@
          <property name="text">
           <string>OK</string>
          </property>
+         <property name="default">
+          <bool>true</bool>
+         </property>
         </widget>
        </item>
        <item>
