--- a/cdsocomnamesearch.ui
+++ b/cdsocomnamesearch.ui
@@ -48,6 +48,9 @@
        <property name="text">
         <string>OK</string>
        </property>
+       <property name="default">
+        <bool>true</bool>
+       </property>
       </widget>
      </item>
      <item>
