--- a/ceventprogdlg.ui
+++ b/ceventprogdlg.ui
@@ -25,6 +25,9 @@
    <property name="text">
     <string>Cancel</string>
    </property>
+   <property name="default">
+    <bool>true</bool>
+   </property>
   </widget>
   <widget class="QProgressBar" name="progressBar">
    <property name="geometry">
