--- a/ceventsearch.ui
+++ b/ceventsearch.ui
@@ -202,6 +202,9 @@
        <property name="text">
         <string>Search</string>
        </property>
+       <property name="default">
+        <bool>true</bool>
+       </property>
       </widget>
      </item>
      <item>
