--- a/csatelliteevent.ui
+++ b/csatelliteevent.ui
@@ -218,6 +218,9 @@
          <property name="text">
           <string>OK</string>
          </property>
+         <property name="default">
+          <bool>true</bool>
+         </property>
         </widget>
        </item>
       </layout>
