--- a/csaveimage.ui
+++ b/csaveimage.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>279</width>
-    <height>263</height>
+    <height>267</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -204,6 +204,9 @@
       <widget class="QPushButton" name="pushButton_2">
        <property name="text">
         <string>OK</string>
+       </property>
+       <property name="default">
+        <bool>true</bool>
        </property>
       </widget>
      </item>
