--- a/csavetm.ui
+++ b/csavetm.ui
@@ -59,6 +59,9 @@
          <property name="text">
           <string>OK</string>
          </property>
+         <property name="default">
+          <bool>true</bool>
+         </property>
         </widget>
        </item>
        <item>
