--- a/csetjd.ui
+++ b/csetjd.ui
@@ -99,6 +99,9 @@
        <property name="text">
         <string>OK</string>
        </property>
+       <property name="default">
+        <bool>true</bool>
+       </property>
       </widget>
      </item>
      <item row="1" column="0">
