--- a/csetting.ui
+++ b/csetting.ui
@@ -4034,6 +4034,9 @@
        <property name="text">
         <string>OK</string>
        </property>
+       <property name="default">
+        <bool>true</bool>
+       </property>
       </widget>
      </item>
      <item>
