--- a/ctychosearch.ui
+++ b/ctychosearch.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>391</width>
-    <height>311</height>
+    <height>325</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -328,6 +328,9 @@
       <widget class="QPushButton" name="pushButton_5">
        <property name="text">
         <string>Cancel</string>
+       </property>
+       <property name="default">
+        <bool>true</bool>
        </property>
       </widget>
      </item>
