Add asteroid info from http://ssd.jpl.nasa.gov/sbdb.cgi

--- a/cobjinfo.ui
+++ b/cobjinfo.ui
@@ -230,6 +230,16 @@
       </widget>
      </item>
      <item>
+      <widget class="QPushButton" name="pushButton_3">
+       <property name="enabled">
+        <bool>true</bool>
+       </property>
+       <property name="text">
+        <string>Find in JPL Small-Body db</string>
+       </property>
+      </widget>
+     </item>
+     <item>
       <widget class="Line" name="line">
        <property name="orientation">
         <enum>Qt::Horizontal</enum>
