--- a/resource.qrc
+++ b/resource.qrc
@@ -102,5 +102,6 @@
         <file>res/donate.png</file>
         <file>res/ico_text.png</file>
         <file>res/ico_obj_tracking.png</file>
+        <file>res/ico_b180.png</file>
     </qresource>
 </RCC>
