--- a/resource.qrc
+++ b/resource.qrc
@@ -104,5 +104,6 @@
         <file>res/ico_obj_tracking.png</file>
         <file>res/ico_b180.png</file>
         <file>res/ico_release_obj.png</file>
+        <file>res/wait.gif</file>
     </qresource>
 </RCC>
